# weasel

./: .gitignore  CHANGELOG.md  Cargo.toml  DETECTOR_IMPROVEMENTS.md  LICENSE.md  README.md  action.yml  release.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: nightly.yml  release.yml
examples/: test.sol
gh-actions-examples/: weasel-basic.yml  weasel-claude-diff.yml  weasel-claude.yml  weasel-gemini-diff.yml  weasel-gemini.yml  weasel-openai-diff.yml  weasel-openai.yml
skills/weasel-gas/: SKILL.md
skills/weasel-poc/: SKILL.md
src/: main.rs
src/cli/: analyze.rs  detectors.rs  init.rs  mod.rs  run.rs
src/cli/mcp/: add.rs  executors.rs  mod.rs  remove.rs  serve.rs  tools.rs
src/config/: mod.rs  protocol.rs
src/core/: c3_linearization.rs  context.rs  engine.rs  finding_collector.rs  import_resolver.rs  mod.rs  processor.rs  project_detector.rs  registry.rs  visitor.rs
src/detectors/: mod.rs
src/detectors/gas/: address_this_precalculation.rs  address_zero_check.rs  array_compound_assignment.rs  array_length_in_loop.rs  assembly_abi_decode.rs  assembly_storage_write.rs  avoid_contract_existence_checks.rs  bool_storage.rs  boolean_comparison.rs  cache_state_variables.rs  cached_constant.rs  cached_immutable.rs  cached_msg_sender.rs  calldata_instead_of_memory.rs  mod.rs  (+24 more)
src/models/: finding.rs  mod.rs  report.rs  scope.rs  severity.rs
src/output/: mod.rs  sarif.rs
src/utils/: ast_utils.rs  location.rs  mod.rs  test_utils.rs  version.rs
weasel/: .mcp.json
weasel/.claude-plugin/: plugin.json
weaselup/: install  weaselup
(+172 files in other folders)
