[package]
name = "weasel"
version = "0.1.0"
edition = "2021"
description = "Smart Contract Static Analysis Tool"
authors = ["slvDev"]

[dependencies]
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
solang-parser = "0.3.4"
semver = "1.0"
